--- a/TestGroup/Test/TestReoGrid/Views/MainWindow.xaml
+++ b/TestGroup/Test/TestReoGrid/Views/MainWindow.xaml
@@ -18,7 +18,8 @@
             <RowDefinition Height="auto" />
             <RowDefinition />
         </Grid.RowDefinitions>
-        <StackPanel Orientation="Horizontal">
+        <StackPanel Orientation="Horizontal"
+                    Margin="0,0,0,10">
             <Button Style="{StaticResource ButtonDashedPrimary.Small}"
                     Command="{Binding SetFilterCommand}"
                     Content="Test" />
@@ -29,6 +30,10 @@
                          SelectedItem="{Binding SelectedFilterCol}"
                          MinWidth="100"
                          Margin="20,0,0,0" />
+            <Button Style="{StaticResource ButtonDashedPrimary.Small}"
+                    Margin="20,0,0,0"
+                    Command="{Binding GetSerialDataCommand}"
+                    Content="GetSerialData" />
         </StackPanel>
 
         <reoGrid:ReoGridControl Grid.Row="99"
