1. 新增validate后的样式调整为红字； 2. AutoSP方法调整，禁用自动生成的sp，勾选后会清空历史数据；

--- a/TestGroup/Test/TestReoGrid/App.xaml
+++ b/TestGroup/Test/TestReoGrid/App.xaml
@@ -15,7 +15,7 @@
             <Color x:Key="PL_DangerColor">#EA0000</Color>
             <SolidColorBrush x:Key="PL_DangerBrush"
                              Color="{StaticResource PL_DangerColor}" />
-            
+            <Color x:Key="PL_MainTextColor">#707070</Color>
 
             <hc:NoBlankTextRule x:Key="Name"
                                 ValidatesOnTargetUpdated="True" />
