1. 新增倍比稀释功能； 2. DeleteProp前后需要解除autorange定义再恢复； 2. AutoCalcuateCore新增后需要加入到ParamValues； 3. 自动计算数据四舍五入； 4. DeleteAutoSP前解除range； 5. AddAutoSP后新增range； 6. DeletePropCore当清空所有sp时还需清空spv

--- a/TestGroup/Test/TestReoGrid/Views/MainWindow.xaml
+++ b/TestGroup/Test/TestReoGrid/Views/MainWindow.xaml
@@ -61,10 +61,13 @@
                                   Minimum="1"
                                   DecimalPlaces="0"
                                   MinWidth="150"
+                                  x:Name="RaitoNud"
                                   Margin="10,0,0,0" />
 
+                        <!--CommandParameter="{Binding DilutionRatio}"-->
                 <Button Style="{StaticResource ButtonDashedPrimary.Small}"
                         Command="{Binding DiluteCommand}"
+                        CommandParameter="{Binding Path=Value, ElementName=RaitoNud}"
                         Content="Dilute"
                         Margin="10,0,0,0" />
             </StackPanel>
